--- a/style.css
+++ b/style.css
@@ -52,11 +52,33 @@ body {
 }
 
 nav a {
-  margin: 0 10px;
+  margin: 0 12px;
   text-decoration: none;
   color: black;
-  font-size: 0.9rem;
+
+  font-family: 'News';
+  font-size: 0.75rem;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+
+  position: relative;
 }
+nav a::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: -3px;
+  width: 100%;
+  height: 1px;
+  background: black;
+  opacity: 0;
+  transition: opacity 0.3s ease;
+}
+
+nav a:hover::after {
+  opacity: 0.6;
+}
+
 
 /* =========================
    HERO / HOME
