--- a/style.css
+++ b/style.css
@@ -278,3 +278,17 @@ footer {
   font-size: 0.75rem;
 }
 
+/* SOCIAL LINKS */
+
+.socials a {
+  color: black;
+  text-decoration: none;
+  font-family: 'News';
+  font-size: 0.75rem;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+}
+
+.socials a:hover {
+  text-decoration: underline;
+}
