--- a/style.css
+++ b/style.css
@@ -373,3 +373,13 @@ padding-bottom: 2px;
 
 }
 
+.album-wrapper {
+  display: block !important;
+  text-align: center;
+}
+
+.album-wrapper img {
+  display: block !important;
+  margin-left: auto;
+  margin-right: auto;
+}
