--- a/style.css
+++ b/style.css
@@ -372,3 +372,8 @@ padding-bottom: 2px;
       #f5f5f5;
   }
 }
+@media (min-width: 1024px) {
+  .newspaper-bg {
+    outline: 4px solid red;
+  }
+}
