--- a/style.css
+++ b/style.css
@@ -158,7 +158,7 @@ nav a:hover::after {
   margin-top: 30px;
   padding: 12px 28px;
 
-  font-family: 'News';
+  font-family: 'Wonderland';
   font-size: 0.85rem;
   letter-spacing: 1px;
   text-transform: uppercase;
