--- a/style.css
+++ b/style.css
@@ -43,7 +43,14 @@
 ========================= */
 
 * {
-  box-sizing: border-box;
+  box-sizing: border-box; 
+   * {
+  cursor: url("data:image/svg+xml;utf8,\
+<svg xmlns='http://www.w3.org/2000/svg' width='32' height='32' viewBox='0 0 32 32'>\
+<polygon points='16,2 20,12 30,16 20,20 16,30 12,20 2,16 12,12' fill='%23f4efe8'/>\
+</svg>") 16 16, auto;
+}
+
 }
 
 body {
