--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 ========================= */
 
 :root {
-  --honey: #b08a5a;
+  --honey: #9a7b55;
   --cream: #f4efe8;
   --dark-brown: #4a3322;
   --dusty-shadow: rgba(74, 51, 34, 0.25);
